[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = "app to shorten url"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.23.2"
fastapi = "^0.104.1"
gunicorn = "^21.2.0"
alembic = "^1.12.1"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
